# gamelog

./: .gitignore  Cargo.toml  README.md
config/: platforms.json
migrations/20170405054646_create_user/: up.sql
migrations/20170405055532_create_user_game/: down.sql
migrations/20170407033817_user_private_split/: down.sql  up.sql
migrations/20170707000934_make_username_unique/: down.sql  up.sql
migrations/20170707002053_add_email_to_user/: up.sql
migrations/20170709185729_user_private_user_id_unique/: down.sql  up.sql
migrations/20170727223637_add_steam_id_to_game/: down.sql  up.sql
migrations/20170728030547_add_steam_profile_id_to_user/: down.sql  up.sql
migrations/20170728044520_add_platform_table/: down.sql  up.sql
migrations/20170728213007_add_slug_to_platform/: down.sql  up.sql
migrations/20171116225751_remove_platform/: down.sql
migrations/20171117021234_user_game_platform/: down.sql  up.sql
schema/: game.sql  user.sql  user_game.sql  user_private.sql
src/: handlers.rs  helpers.rs  main.rs  model.rs  secrets.rs  session.rs  steam.rs  templates.rs
templates/: add_user_game_form.html  base.html  login_form.html  signup_form.html  user_game_form.html  user_log.html  user_settings_form.html
