[package]
name = "gamelog"
version = "0.1.0"
authors = ["Ben Bariteau <firba1@gmail.com>"]
build = "build.rs"

[dependencies]
iron = "0.5.*"
router = "0.5.*"
urlencoded = "^0.5.0"
logger = "^0.3.0"
rusqlite = "^0.10.1"
error-chain = "^0.7.1"
askama = "^0.3.1"
env_logger = "^0.4.2"
rand = "^0.3.0"
bcrypt = "^0.1.3"
params = "^0.6.0"

[build-dependencies]
askama = "^0.3.1"
