[package]
name = "gamelog"
version = "0.1.0"
authors = ["Ben Bariteau <firba1@gmail.com>"]
build = "build.rs"

[dependencies]
iron = "0.5.*"
router = "0.5.*"
urlencoded = "^0.5.0"
logger = "^0.3.0"
error-chain = "^0.10.0"
askama = "^0.3.1"
env_logger = "^0.4.2"
rand = "^0.3.0"
bcrypt = "^0.1.3"
params = "^0.6.0"
time = "^0.1.36"
diesel = { version = "^0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "^0.12.0", features = ["sqlite"] }
secure-session = "^0.2.0"
serde = "^1.0.9"
serde_derive = "^1.0.9"
typemap = "^0.3.3"

[build-dependencies]
askama = "^0.3.1"
